# SOCIALMEDIAAUTOMATION

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  MAKE_SETUP.md  RAILWAY_SETUP.md  README.md  SOCIALMEDIAAUTOMATION  SOCIALMEDIAAUTOMATION.py  backendautomation.py  pyproject.toml  railway.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
tests/: test_SOCIALMEDIAAUTOMATION.py  test_backend.py
